--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+div{
+	display:inline;
+	justify-content:;
+	align-items:;
+	text-align:center;
+	font-size:12px;
+}
+img{
+	display:auto;
+	width:50%;
+	height:auto;
+	object-fit:cover;
+	float:left;
+
+}
+button{
+	display:inline;
+	padding:5px;
+	background-color:orange;
+	color:white;
+	border-radius:5px;
+	float:right;
+	margin-top:50px;
+	margin-right:100px;
+	
+}
